--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,14 +2,31 @@ version: 2
 
 models:
   - name: stg_customers
+    description: One unique customer per row
     columns:
       - name: customer_id
+        description: Primary key for customers
         tests:
           - unique
           - not_null
   - name: stg_orders
     columns:
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
-        - accepted_values:
-            values: ['returned', 'completed', 'shipped', 'placed', 'return_pending']
+          - accepted_values:
+              values:
+                - 'returned'
+                - 'completed'
+                - 'shipped'
+                - 'placed'
+                - 'return_pending'
+      - name: order_id
+        tests:
+          - unique
+          - not_null
+      - name: customer_id
+        tests:
+          - relationships:
+              to: ref('stg_customers')
+              field: customer_id
